drawing stuff/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\Jonny\Documents\GitHub\ap-comp-sci\drawing stuff
-d
C:\Users\Jonny\Documents\GitHub\ap-comp-sci\drawing stuff\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Jonny\Documents\GitHub\ap-comp-sci\drawing stuff\drawProject.java
<---- end of javadoc command ---->
Loading source file C:\Users\Jonny\Documents\GitHub\ap-comp-sci\drawing stuff\drawProject.java...
C:\Users\Jonny\Documents\GitHub\ap-comp-sci\drawing stuff\drawProject.java:112: error: ')' expected
getHeight() 
           ^
C:\Users\Jonny\Documents\GitHub\ap-comp-sci\drawing stuff\drawProject.java:113: error: ';' expected
        getHeight()); 
                   ^
2 errors
